<resources>
    <string name="app_name">Payment Details</string>
    <string name="txtName">Full Name</string>
    <string name="txtCountry">Country</string>
    <string name="txtNumofparticipants">Number of Participants</string>
    <string name="txtContact">Contact Number</string>
    <string name="txtEmail">Email</string>
    <string name="txtPriceandpayment">Price and Payment Type</string>
    <string name="btnConfirm">Confirm Payment</string>
    <string name="btnSelect">Select</string>
    <string name="btnDelete">Delete</string>
    <string name="cst" />
    <string name="txtcst">Clasical summer tour(Tours)</string>
    <string name="txtcwt">Clasical winter tour(Tours)</string>
    <string name="txtat">Adventures tour(Tours)</string>
    <string name="txtsit">Special interest tour(Tours)</string>
    <string name="txtft">Family tour(Tours)</string>
    <string name="txtqgt">Quick glance tour(Tours)</string>
    <string name="txtcbw">Camping and Bird watching(Activities)</string>
    <string name="txtdww">Dolphin and Whale watching(Activities)</string>
    <string name="txtws">Water Sports(Activities)</string>
    <string name="txta">Adventures(Activities)</string>
    <string name="txttg">Tours and Guide(Services)</string>
    <string name="txtts">Transport Services(Services)</string>
    <string name="txtls">Luxury Hotel(Hotels)</string>
    <string name="txtv">Villa(Hotels)</string>
    <string name="txtgs">Guest House(Hotels)</string>
    <string name="txtp1">Rs.10000</string>
    <string name="txtp2">Rs.8000</string>
    <string name="txtp3">Rs.11000</string>
    <string name="txtp4">Rs.13000</string>
    <string name="txtp5">Rs.12000</string>
    <string name="txtp6">Rs.10000</string>
    <string name="txtp7">Rs.9500</string>
    <string name="txtp8">Rs.7000</string>
    <string name="txtp9">Rs.15000</string>
    <string name="txtp10">Rs.15500</string>
    <string name="txtsrt">Special Rainforest trail(Activities)</string>
    <string name="txtthfe">Traditional Handcraft factory experience(Activities)</string>
    <string name="btnp">Pay</string>
</resources>